--- a/index.html
+++ b/index.html
@@ -3,9 +3,26 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Document</title>
-		<link rel="stylesheet" href="flexbox.css">
+		<link rel="stylesheet" href="dist/css/main.css">
+		<script src="dist/js/app.js"></script>
 	</head>
 	<body>
+
+		<nav class="container">
+			<div>Home</div>
+			<div>Search</div>
+			<div>Logout</div>
+		</nav>
+	
+		<div class="gallery">
+			<div class="gallery__item gallery__item--small">
+				<img src="" alt="">
+			</div>
+			<div class="gallery__item gallery__item--large">
+				<img src="" alt="">
+			</div>
+		</div>
+	
 		<div id="main" class="container">
 			<div class="item">
 				<table>
