--- a/index.html
+++ b/index.html
@@ -4,15 +4,61 @@
 		<meta charset="UTF-8">
 		<title>Document</title>
 		<link rel="stylesheet" href="dist/css/main.css">
-		<script src="dist/js/app.js"></script>
 	</head>
 	<body>
 
+	<div class="container">
+		<div class="normal"><img src="./assets/images/Life-Hotel-NYC-2017-74-430x310.jpg"/></div>
+		<div  class="big"><img src="./assets/images/Life-Hotel-NYC-2017-101-e1510958004420-430x640.jpg"/></div>
+		<div class="normal"><img src="./assets/images/Life-Hotel-NYC-2017-74-430x310.jpg"/></div>
+		<div  class="big"><img src="./assets/images/Life-Hotel-NYC-2017-101-e1510958004420-430x640.jpg"/></div>
+		<div class="normal"><img src="./assets/images/Life-Hotel-NYC-2017-74-430x310.jpg"/></div>
+		<div  class="big"><img src="./assets/images/Life-Hotel-NYC-2017-101-e1510958004420-430x640.jpg"/></div>
+		<div class="normal"><img src="./assets/images/Life-Hotel-NYC-2017-74-430x310.jpg"/></div>
+		<div  class="big"><img src="./assets/images/Life-Hotel-NYC-2017-101-e1510958004420-430x640.jpg"/></div>
+		<div class="normal"><img src="./assets/images/Life-Hotel-NYC-2017-74-430x310.jpg"/></div>
+		<div  class="big"><img src="./assets/images/Life-Hotel-NYC-2017-101-e1510958004420-430x640.jpg"/></div>		<div class="normal"><img src="./assets/images/Life-Hotel-NYC-2017-74-430x310.jpg"/></div>
+		<div  class="big"><img src="./assets/images/Life-Hotel-NYC-2017-101-e1510958004420-430x640.jpg"/></div>		<div class="normal"><img src="./assets/images/Life-Hotel-NYC-2017-74-430x310.jpg"/></div>
+		<div  class="big"><img src="./assets/images/Life-Hotel-NYC-2017-101-e1510958004420-430x640.jpg"/></div>
+
+
+	</div>
+
+
+		<!--
 		<nav class="container">
-			<div>Home</div>
-			<div>Search</div>
-			<div>Logout</div>
+			<div class="home item1">1 Home</div>
+			<div class="search item2">2 Search</div>
+			<div class="logout item3">3 Logout</div>
 		</nav>
+		-->
+
+		<!--
+		<nav>
+			<ul class="container">
+				<li>Home</li>
+				<li>Profile</li>
+				<li class="search">
+					<input type="text" class="search-input" placeholder="Search">
+				</li>
+				<li>Logout</li>
+			</ul>
+		</nav>
+		-->
+
+		<!--
+		<div class="c">
+			<div class="a">
+				TEXT
+			</div>
+		</div>
+
+		<div class="d">
+			<div class="b">
+				TEXT
+			</div>
+		</div>
+
 	
 		<div class="gallery">
 			<div class="gallery__item gallery__item--small">
@@ -68,6 +114,9 @@
 					</tr>
 				</table>
 			</div>
-		</div>	
+		</div>
+		-->
+
+		<script src="dist/js/app.js"></script>
 	</body>
 </html>
